# ranking-metrics-torch

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml
ranking_metrics_torch/: avg_precision.py  common.py  cumulative_gain.py  precision_recall.py
tests/: conftest.py  test_avg_precision.py  test_common.py  test_cumulative_gain.py  test_precision_recall.py  test_ranking_metrics_torch.py
