[tool.poetry]
name = "ranking-metrics-torch"
version = "0.2.3"
description = "Common ranking metrics implemented with PyTorch"
authors = ["Karl Higley <kmhigley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
mypy = "^0.780"
black = "^19.10b0"
flake8 = "^3.8.3"
pre-commit = "^2.5.1"
scikit-learn = "^0.23.1"
hypothesis = "^5.16.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
